--- a/MakeupTestingTests/Report/MakeupTestingTests.BrandsTests 22-05-2024_(19_03_02)/index.html
+++ b/MakeupTestingTests/Report/MakeupTestingTests.BrandsTests 22-05-2024_(19_03_02)/index.html
@@ -52,7 +52,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">04/04/2024 12:33:11 PM</span>
+                    <span class="badge badge-primary">05/22/2024 7:03:02 PM</span>
                 </a>
             </li>
         </ul>
@@ -107,7 +107,7 @@
 											<i class="fa fa-exclamation-circle"></i>
 										</a>
 										<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																																																		<div class="dropdown-divider"></div>
 											<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 										</ul>
 									</li>
@@ -115,25 +115,25 @@
                             </div>
                             <div class="test-list-wrapper scrollable">
                                 <ul class="test-list-item">
-										<li class="test-item" status="fail" author="" device="" tag=""> 
-											<div class="status-avatar fail-bg">
-												<i class="fa fa-times text-white"></i>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyFilterProducts</p> 
-													<p class="duration text-sm">0h:0m:45s+273ms</p> 
-													<span class="datetime">12:33:11 PM</span>
+													<p class="name">VerifySelectProductsByBrands</p> 
+													<p class="duration text-sm">0h:0m:14s+127ms</p> 
+													<span class="datetime">19:03:02 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-fail">VerifyFilterProducts</h5>
-															<span class='badge badge-success'>04/04/2024 12:33:11 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:33:56 PM</span>
-															<span class='badge badge-default'>0h:0m:45s+273ms</span>
+															<h5 class="test-status text-pass">VerifySelectProductsByBrands</h5>
+															<span class='badge badge-success'>05/22/2024 7:03:02 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:03:17 PM</span>
+															<span class='badge badge-default'>0h:0m:14s+127ms</span>
 														</div>
 																											</div>
 												</div>
@@ -147,19 +147,11 @@
 	</tr></thead>
 	<tbody>
 			<tr class="event-row">
-				<td><i class="fa fa-times text-fail"></i></td>
-				<td>12:33:56</td>
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>19:03:17</td>
 				<td>
-Test ended with Fail, 
-<br>   at NUnit.Framework.Legacy.StringAssert.Contains(String expected, String actual, String message, Object[] args)
-   at MakeupTestingTests.DecorativeCosmeticsTests.VerifyFilterProducts() in E:\VisualStudio\RepVisualStudio\MakeupTesting\MakeupTestingTests\DecorativeCosmeticsTests.cs:line 42
-
+Test ended with Pass, 
 <br>
-<br>  The product type is missing in the title (Artdeco Hydra Lip Booster, Блеск для губ с эффектом увеличения - Artdeco Hydra Lip Booster)
-Assert.That(actual, Does.Contain(expected))
-  Expected: String containing "блиск для губ"
-  But was:  "блеск для губ с эффектом увеличения - artdeco hydra lip booster"
-
 <br>									</td>
 			</tr>
 	</tbody>
