--- a/MakeupTestingTests/Report/MakeupTestingTests.CartTests 22-05-2024_(19_03_20)/index.html
+++ b/MakeupTestingTests/Report/MakeupTestingTests.CartTests 22-05-2024_(19_03_20)/index.html
@@ -52,7 +52,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">04/04/2024 12:28:59 PM</span>
+                    <span class="badge badge-primary">05/22/2024 7:03:20 PM</span>
                 </a>
             </li>
         </ul>
@@ -121,19 +121,19 @@
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">ChangePageLanguage</p> 
-													<p class="duration text-sm">0h:0m:9s+667ms</p> 
-													<span class="datetime">12:28:59 PM</span>
+													<p class="name">CalculateTotalProductPriceInOrder</p> 
+													<p class="duration text-sm">0h:0m:17s+266ms</p> 
+													<span class="datetime">19:03:20 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">ChangePageLanguage</h5>
-															<span class='badge badge-success'>04/04/2024 12:28:59 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:29:09 PM</span>
-															<span class='badge badge-default'>0h:0m:9s+667ms</span>
+															<h5 class="test-status text-pass">CalculateTotalProductPriceInOrder</h5>
+															<span class='badge badge-success'>05/22/2024 7:03:20 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:03:37 PM</span>
+															<span class='badge badge-default'>0h:0m:17s+266ms</span>
 														</div>
 																											</div>
 												</div>
@@ -148,7 +148,7 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:29:09</td>
+				<td>19:03:37</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -166,19 +166,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">CheckDisplayOfTooltip</p> 
-													<p class="duration text-sm">0h:0m:7s+438ms</p> 
-													<span class="datetime">12:29:09 PM</span>
+													<p class="name">VerifyAddProductToCart</p> 
+													<p class="duration text-sm">0h:0m:12s+160ms</p> 
+													<span class="datetime">19:03:37 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">CheckDisplayOfTooltip</h5>
-															<span class='badge badge-success'>04/04/2024 12:29:09 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:29:16 PM</span>
-															<span class='badge badge-default'>0h:0m:7s+438ms</span>
+															<h5 class="test-status text-pass">VerifyAddProductToCart</h5>
+															<span class='badge badge-success'>05/22/2024 7:03:37 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:03:50 PM</span>
+															<span class='badge badge-default'>0h:0m:12s+160ms</span>
 														</div>
 																											</div>
 												</div>
@@ -193,7 +193,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:29:16</td>
+				<td>19:03:50</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -211,19 +211,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">NavigateToBeautyClub</p> 
-													<p class="duration text-sm">0h:0m:14s+241ms</p> 
-													<span class="datetime">12:29:16 PM</span>
+													<p class="name">VerifyDecreaseQuantityProductInOrder</p> 
+													<p class="duration text-sm">0h:0m:13s+786ms</p> 
+													<span class="datetime">19:03:50 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">NavigateToBeautyClub</h5>
-															<span class='badge badge-success'>04/04/2024 12:29:16 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:29:31 PM</span>
-															<span class='badge badge-default'>0h:0m:14s+241ms</span>
+															<h5 class="test-status text-pass">VerifyDecreaseQuantityProductInOrder</h5>
+															<span class='badge badge-success'>05/22/2024 7:03:50 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:04:04 PM</span>
+															<span class='badge badge-default'>0h:0m:13s+786ms</span>
 														</div>
 																											</div>
 												</div>
@@ -238,7 +238,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:29:31</td>
+				<td>19:04:04</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -256,19 +256,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">NavigateToYouTube</p> 
-													<p class="duration text-sm">0h:0m:12s+365ms</p> 
-													<span class="datetime">12:29:31 PM</span>
+													<p class="name">VerifyDeleteProductFromCart</p> 
+													<p class="duration text-sm">0h:0m:12s+882ms</p> 
+													<span class="datetime">19:04:04 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">NavigateToYouTube</h5>
-															<span class='badge badge-success'>04/04/2024 12:29:31 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:29:43 PM</span>
-															<span class='badge badge-default'>0h:0m:12s+365ms</span>
+															<h5 class="test-status text-pass">VerifyDeleteProductFromCart</h5>
+															<span class='badge badge-success'>05/22/2024 7:04:04 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:04:17 PM</span>
+															<span class='badge badge-default'>0h:0m:12s+882ms</span>
 														</div>
 																											</div>
 												</div>
@@ -283,7 +283,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:29:43</td>
+				<td>19:04:17</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -301,19 +301,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">SelectDeliveryVariantByCity</p> 
-													<p class="duration text-sm">0h:0m:9s+794ms</p> 
-													<span class="datetime">12:29:43 PM</span>
+													<p class="name">VerifyIncreaseQuantityProductInOrder</p> 
+													<p class="duration text-sm">0h:0m:12s+224ms</p> 
+													<span class="datetime">19:04:17 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">SelectDeliveryVariantByCity</h5>
-															<span class='badge badge-success'>04/04/2024 12:29:43 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:29:53 PM</span>
-															<span class='badge badge-default'>0h:0m:9s+794ms</span>
+															<h5 class="test-status text-pass">VerifyIncreaseQuantityProductInOrder</h5>
+															<span class='badge badge-success'>05/22/2024 7:04:17 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:04:29 PM</span>
+															<span class='badge badge-default'>0h:0m:12s+224ms</span>
 														</div>
 																											</div>
 												</div>
@@ -328,7 +328,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:29:53</td>
+				<td>19:04:29</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -346,19 +346,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">SelectSubCategory</p> 
-													<p class="duration text-sm">0h:0m:9s+528ms</p> 
-													<span class="datetime">12:29:53 PM</span>
+													<p class="name">VerifyPossibilityOfPostponingOrder</p> 
+													<p class="duration text-sm">0h:0m:14s+905ms</p> 
+													<span class="datetime">19:04:29 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">SelectSubCategory</h5>
-															<span class='badge badge-success'>04/04/2024 12:29:53 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:30:03 PM</span>
-															<span class='badge badge-default'>0h:0m:9s+528ms</span>
+															<h5 class="test-status text-pass">VerifyPossibilityOfPostponingOrder</h5>
+															<span class='badge badge-success'>05/22/2024 7:04:29 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:04:44 PM</span>
+															<span class='badge badge-default'>0h:0m:14s+905ms</span>
 														</div>
 																											</div>
 												</div>
@@ -373,97 +373,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:30:03</td>
-				<td>
-Test ended with Pass, 
-<br>
-<br>									</td>
-			</tr>
-	</tbody>
-</table>
-
-</div>    
-											</div>
-										</li>
-										<li class="test-item" status="pass" author="" device="" tag=""> 
-											<div class="status-avatar pass-bg">
-												<i class="fa fa-check text-white"></i>
-											</div>
-											<div class="open-test">
-												<div class="test-detail"> 
-													<p class="name">VerifyScrollUpButton</p> 
-													<p class="duration text-sm">0h:0m:6s+846ms</p> 
-													<span class="datetime">12:30:03 PM</span>
-												</div>
-											</div>
-											<div class="test-contents d-none">
-												<div class="detail-head">
-													<div class="p-v-10 d-inline-block">	
-														<div class="info">
-															<h5 class="test-status text-pass">VerifyScrollUpButton</h5>
-															<span class='badge badge-success'>04/04/2024 12:30:03 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:30:10 PM</span>
-															<span class='badge badge-default'>0h:0m:6s+846ms</span>
-														</div>
-																											</div>
-												</div>
-<div class="detail-body mt-4">												
-	
-<table class="table table-sm">
-	<thead><tr>
-		<th class="status-col">Status</th>
-		<th class="timestamp-col">Timestamp</th>
-		<th class="details-col">Details</th>
-	</tr></thead>
-	<tbody>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:30:10</td>
-				<td>
-Test ended with Pass, 
-<br>
-<br>									</td>
-			</tr>
-	</tbody>
-</table>
-
-</div>    
-											</div>
-										</li>
-										<li class="test-item" status="pass" author="" device="" tag=""> 
-											<div class="status-avatar pass-bg">
-												<i class="fa fa-check text-white"></i>
-											</div>
-											<div class="open-test">
-												<div class="test-detail"> 
-													<p class="name">VerifySubscriptionErrorDisplay</p> 
-													<p class="duration text-sm">0h:0m:7s+955ms</p> 
-													<span class="datetime">12:30:10 PM</span>
-												</div>
-											</div>
-											<div class="test-contents d-none">
-												<div class="detail-head">
-													<div class="p-v-10 d-inline-block">	
-														<div class="info">
-															<h5 class="test-status text-pass">VerifySubscriptionErrorDisplay</h5>
-															<span class='badge badge-success'>04/04/2024 12:30:10 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:30:18 PM</span>
-															<span class='badge badge-default'>0h:0m:7s+955ms</span>
-														</div>
-																											</div>
-												</div>
-<div class="detail-body mt-4">												
-	
-<table class="table table-sm">
-	<thead><tr>
-		<th class="status-col">Status</th>
-		<th class="timestamp-col">Timestamp</th>
-		<th class="details-col">Details</th>
-	</tr></thead>
-	<tbody>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:30:18</td>
+				<td>19:04:44</td>
 				<td>
 Test ended with Pass, 
 <br>
