--- a/MakeupTestingTests/Report/MakeupTestingTests.DecorativeCosmeticsTests 22-05-2024_(19_04_45)/index.html
+++ b/MakeupTestingTests/Report/MakeupTestingTests.DecorativeCosmeticsTests 22-05-2024_(19_04_45)/index.html
@@ -52,7 +52,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">04/04/2024 12:25:26 PM</span>
+                    <span class="badge badge-primary">05/22/2024 7:04:45 PM</span>
                 </a>
             </li>
         </ul>
@@ -107,7 +107,7 @@
 											<i class="fa fa-exclamation-circle"></i>
 										</a>
 										<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																																																		<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
 											<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 										</ul>
 									</li>
@@ -121,19 +121,19 @@
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">CalculateTotalProductPriceInOrder</p> 
-													<p class="duration text-sm">0h:0m:21s+229ms</p> 
-													<span class="datetime">12:25:26 PM</span>
+													<p class="name">SerializeTest</p> 
+													<p class="duration text-sm">0h:0m:11s+100ms</p> 
+													<span class="datetime">19:04:45 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">CalculateTotalProductPriceInOrder</h5>
-															<span class='badge badge-success'>04/04/2024 12:25:26 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:25:47 PM</span>
-															<span class='badge badge-default'>0h:0m:21s+229ms</span>
+															<h5 class="test-status text-pass">SerializeTest</h5>
+															<span class='badge badge-success'>05/22/2024 7:04:45 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:04:56 PM</span>
+															<span class='badge badge-default'>0h:0m:11s+100ms</span>
 														</div>
 																											</div>
 												</div>
@@ -148,7 +148,105 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:25:47</td>
+				<td>19:04:56</td>
+				<td>
+Test ended with Pass, 
+<br>
+<br>									</td>
+			</tr>
+	</tbody>
+</table>
+
+</div>    
+											</div>
+										</li>
+										<li class="test-item" status="fail" author="" device="" tag=""> 
+											<div class="status-avatar fail-bg">
+												<i class="fa fa-times text-white"></i>
+											</div>
+											<div class="open-test">
+												<div class="test-detail"> 
+													<p class="name">VerifyFilterProducts</p> 
+													<p class="duration text-sm">0h:0m:10s+878ms</p> 
+													<span class="datetime">19:04:56 PM</span>
+												</div>
+											</div>
+											<div class="test-contents d-none">
+												<div class="detail-head">
+													<div class="p-v-10 d-inline-block">	
+														<div class="info">
+															<h5 class="test-status text-fail">VerifyFilterProducts</h5>
+															<span class='badge badge-success'>05/22/2024 7:04:56 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:05:07 PM</span>
+															<span class='badge badge-default'>0h:0m:10s+878ms</span>
+														</div>
+																											</div>
+												</div>
+<div class="detail-body mt-4">												
+	
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-times text-fail"></i></td>
+				<td>19:05:07</td>
+				<td>
+Test ended with Fail, 
+<br>   at NUnit.Framework.Legacy.StringAssert.Contains(String expected, String actual, String message, Object[] args)
+   at MakeupTestingTests.DecorativeCosmeticsTests.VerifyFilterProducts() in E:\VisualStudio\RepVisualStudio\MakeupTesting\MakeupTestingTests\DecorativeCosmeticsTests.cs:line 42
+
+<br>
+<br>  The product type is missing in the title (Artdeco Hydra Lip Booster, Блеск для губ с эффектом увеличения - Artdeco Hydra Lip Booster)
+Assert.That(actual, Does.Contain(expected))
+  Expected: String containing "блиск для губ"
+  But was:  "блеск для губ с эффектом увеличения - artdeco hydra lip booster"
+
+<br>									</td>
+			</tr>
+	</tbody>
+</table>
+
+</div>    
+											</div>
+										</li>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
+											</div>
+											<div class="open-test">
+												<div class="test-detail"> 
+													<p class="name">VerifyFilterProductsByPrice</p> 
+													<p class="duration text-sm">0h:0m:10s+889ms</p> 
+													<span class="datetime">19:05:07 PM</span>
+												</div>
+											</div>
+											<div class="test-contents d-none">
+												<div class="detail-head">
+													<div class="p-v-10 d-inline-block">	
+														<div class="info">
+															<h5 class="test-status text-pass">VerifyFilterProductsByPrice</h5>
+															<span class='badge badge-success'>05/22/2024 7:05:07 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:05:18 PM</span>
+															<span class='badge badge-default'>0h:0m:10s+889ms</span>
+														</div>
+																											</div>
+												</div>
+<div class="detail-body mt-4">												
+	
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>19:05:18</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -166,19 +264,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyAddProductToCart</p> 
-													<p class="duration text-sm">0h:0m:15s+467ms</p> 
-													<span class="datetime">12:25:48 PM</span>
+													<p class="name">VerifyMovementTestimonialsInSlider</p> 
+													<p class="duration text-sm">0h:0m:10s+648ms</p> 
+													<span class="datetime">19:05:18 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyAddProductToCart</h5>
-															<span class='badge badge-success'>04/04/2024 12:25:48 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:26:03 PM</span>
-															<span class='badge badge-default'>0h:0m:15s+467ms</span>
+															<h5 class="test-status text-pass">VerifyMovementTestimonialsInSlider</h5>
+															<span class='badge badge-success'>05/22/2024 7:05:18 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:05:29 PM</span>
+															<span class='badge badge-default'>0h:0m:10s+648ms</span>
 														</div>
 																											</div>
 												</div>
@@ -193,7 +291,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:26:03</td>
+				<td>19:05:29</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -211,19 +309,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyDecreaseQuantityProductInOrder</p> 
-													<p class="duration text-sm">0h:0m:15s+003ms</p> 
-													<span class="datetime">12:26:03 PM</span>
+													<p class="name">VerifyProductsCountByClickOnBtnMoreProducts</p> 
+													<p class="duration text-sm">0h:0m:19s+364ms</p> 
+													<span class="datetime">19:05:29 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyDecreaseQuantityProductInOrder</h5>
-															<span class='badge badge-success'>04/04/2024 12:26:03 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:26:18 PM</span>
-															<span class='badge badge-default'>0h:0m:15s+003ms</span>
+															<h5 class="test-status text-pass">VerifyProductsCountByClickOnBtnMoreProducts</h5>
+															<span class='badge badge-success'>05/22/2024 7:05:29 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:05:48 PM</span>
+															<span class='badge badge-default'>0h:0m:19s+364ms</span>
 														</div>
 																											</div>
 												</div>
@@ -238,7 +336,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:26:18</td>
+				<td>19:05:48</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -256,19 +354,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyDeleteProductFromCart</p> 
-													<p class="duration text-sm">0h:0m:16s+236ms</p> 
-													<span class="datetime">12:26:18 PM</span>
+													<p class="name">VerifyRemoveFilters</p> 
+													<p class="duration text-sm">0h:0m:9s+679ms</p> 
+													<span class="datetime">19:05:48 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyDeleteProductFromCart</h5>
-															<span class='badge badge-success'>04/04/2024 12:26:18 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:26:35 PM</span>
-															<span class='badge badge-default'>0h:0m:16s+236ms</span>
+															<h5 class="test-status text-pass">VerifyRemoveFilters</h5>
+															<span class='badge badge-success'>05/22/2024 7:05:48 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:05:58 PM</span>
+															<span class='badge badge-default'>0h:0m:9s+679ms</span>
 														</div>
 																											</div>
 												</div>
@@ -283,7 +381,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:26:35</td>
+				<td>19:05:58</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -301,19 +399,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyIncreaseQuantityProductInOrder</p> 
-													<p class="duration text-sm">0h:0m:14s+972ms</p> 
-													<span class="datetime">12:26:35 PM</span>
+													<p class="name">VerifySelectCategory</p> 
+													<p class="duration text-sm">0h:0m:9s+498ms</p> 
+													<span class="datetime">19:05:58 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyIncreaseQuantityProductInOrder</h5>
-															<span class='badge badge-success'>04/04/2024 12:26:35 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:26:50 PM</span>
-															<span class='badge badge-default'>0h:0m:14s+972ms</span>
+															<h5 class="test-status text-pass">VerifySelectCategory</h5>
+															<span class='badge badge-success'>05/22/2024 7:05:58 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:06:08 PM</span>
+															<span class='badge badge-default'>0h:0m:9s+498ms</span>
 														</div>
 																											</div>
 												</div>
@@ -328,7 +426,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:26:50</td>
+				<td>19:06:08</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -346,19 +444,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyPossibilityOfPostponingOrder</p> 
-													<p class="duration text-sm">0h:0m:17s+410ms</p> 
-													<span class="datetime">12:26:50 PM</span>
+													<p class="name">VerifySelectProductImage</p> 
+													<p class="duration text-sm">0h:0m:10s+586ms</p> 
+													<span class="datetime">19:06:08 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyPossibilityOfPostponingOrder</h5>
-															<span class='badge badge-success'>04/04/2024 12:26:50 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:27:07 PM</span>
-															<span class='badge badge-default'>0h:0m:17s+410ms</span>
+															<h5 class="test-status text-pass">VerifySelectProductImage</h5>
+															<span class='badge badge-success'>05/22/2024 7:06:08 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:06:19 PM</span>
+															<span class='badge badge-default'>0h:0m:10s+586ms</span>
 														</div>
 																											</div>
 												</div>
@@ -373,10 +471,65 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:27:07</td>
+				<td>19:06:19</td>
 				<td>
 Test ended with Pass, 
 <br>
+<br>									</td>
+			</tr>
+	</tbody>
+</table>
+
+</div>    
+											</div>
+										</li>
+										<li class="test-item" status="fail" author="" device="" tag=""> 
+											<div class="status-avatar fail-bg">
+												<i class="fa fa-times text-white"></i>
+											</div>
+											<div class="open-test">
+												<div class="test-detail"> 
+													<p class="name">VerifySortProductsByPrice</p> 
+													<p class="duration text-sm">0h:0m:13s+397ms</p> 
+													<span class="datetime">19:06:19 PM</span>
+												</div>
+											</div>
+											<div class="test-contents d-none">
+												<div class="detail-head">
+													<div class="p-v-10 d-inline-block">	
+														<div class="info">
+															<h5 class="test-status text-fail">VerifySortProductsByPrice</h5>
+															<span class='badge badge-success'>05/22/2024 7:06:19 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:06:32 PM</span>
+															<span class='badge badge-default'>0h:0m:13s+397ms</span>
+														</div>
+																											</div>
+												</div>
+<div class="detail-body mt-4">												
+	
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-times text-fail"></i></td>
+				<td>19:06:32</td>
+				<td>
+Test ended with Fail, 
+<br>   at NUnit.Framework.Legacy.CollectionAssert.AreEqual(IEnumerable expected, IEnumerable actual, String message, Object[] args)
+   at MakeupTestingTests.DecorativeCosmeticsTests.VerifySortProductsByPrice() in E:\VisualStudio\RepVisualStudio\MakeupTesting\MakeupTestingTests\DecorativeCosmeticsTests.cs:line 92
+
+<br>
+<br>  The products are not sorted by prices
+Assert.That(actual, Is.EqualTo(expected).AsCollection)
+  Expected and actual are both <System.Collections.Generic.List`1[System.Double]> with 11 elements
+  Values differ at index [0]
+  Expected: 0.0d
+  But was:  273.0d
+
 <br>									</td>
 			</tr>
 	</tbody>
