--- a/MakeupTestingTests/Report/MakeupTestingTests.MainPageTests 22-05-2024_(19_06_32)/index.html
+++ b/MakeupTestingTests/Report/MakeupTestingTests.MainPageTests 22-05-2024_(19_06_32)/index.html
@@ -52,7 +52,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">04/04/2024 12:30:33 PM</span>
+                    <span class="badge badge-primary">05/22/2024 7:06:32 PM</span>
                 </a>
             </li>
         </ul>
@@ -107,7 +107,7 @@
 											<i class="fa fa-exclamation-circle"></i>
 										</a>
 										<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																																																		<div class="dropdown-divider"></div>
 											<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 										</ul>
 									</li>
@@ -121,19 +121,19 @@
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyFollowLinkBreadCrumbs</p> 
-													<p class="duration text-sm">0h:0m:14s+537ms</p> 
-													<span class="datetime">12:30:33 PM</span>
+													<p class="name">ChangePageLanguage</p> 
+													<p class="duration text-sm">0h:0m:9s+622ms</p> 
+													<span class="datetime">19:06:32 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyFollowLinkBreadCrumbs</h5>
-															<span class='badge badge-success'>04/04/2024 12:30:33 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:30:47 PM</span>
-															<span class='badge badge-default'>0h:0m:14s+537ms</span>
+															<h5 class="test-status text-pass">ChangePageLanguage</h5>
+															<span class='badge badge-success'>05/22/2024 7:06:32 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:06:42 PM</span>
+															<span class='badge badge-default'>0h:0m:9s+622ms</span>
 														</div>
 																											</div>
 												</div>
@@ -148,7 +148,7 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:30:47</td>
+				<td>19:06:42</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -166,19 +166,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyInputProductNameInSearch</p> 
-													<p class="duration text-sm">0h:0m:11s+100ms</p> 
-													<span class="datetime">12:30:48 PM</span>
+													<p class="name">CheckDisplayOfTooltip</p> 
+													<p class="duration text-sm">0h:0m:7s+365ms</p> 
+													<span class="datetime">19:06:42 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyInputProductNameInSearch</h5>
-															<span class='badge badge-success'>04/04/2024 12:30:48 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:30:59 PM</span>
-															<span class='badge badge-default'>0h:0m:11s+100ms</span>
+															<h5 class="test-status text-pass">CheckDisplayOfTooltip</h5>
+															<span class='badge badge-success'>05/22/2024 7:06:42 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:06:50 PM</span>
+															<span class='badge badge-default'>0h:0m:7s+365ms</span>
 														</div>
 																											</div>
 												</div>
@@ -193,7 +193,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:30:59</td>
+				<td>19:06:50</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -211,19 +211,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyInputSpaceInSearch</p> 
-													<p class="duration text-sm">0h:0m:9s+444ms</p> 
-													<span class="datetime">12:30:59 PM</span>
+													<p class="name">NavigateToBeautyClub</p> 
+													<p class="duration text-sm">0h:0m:23s+413ms</p> 
+													<span class="datetime">19:06:50 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyInputSpaceInSearch</h5>
-															<span class='badge badge-success'>04/04/2024 12:30:59 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:31:08 PM</span>
-															<span class='badge badge-default'>0h:0m:9s+444ms</span>
+															<h5 class="test-status text-pass">NavigateToBeautyClub</h5>
+															<span class='badge badge-success'>05/22/2024 7:06:50 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:07:13 PM</span>
+															<span class='badge badge-default'>0h:0m:23s+413ms</span>
 														</div>
 																											</div>
 												</div>
@@ -238,7 +238,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:31:08</td>
+				<td>19:07:13</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -256,19 +256,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyInputSpecialCharactersInSearchField</p> 
-													<p class="duration text-sm">0h:0m:9s+668ms</p> 
-													<span class="datetime">12:31:08 PM</span>
+													<p class="name">NavigateToYouTube</p> 
+													<p class="duration text-sm">0h:0m:11s+670ms</p> 
+													<span class="datetime">19:07:13 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyInputSpecialCharactersInSearchField</h5>
-															<span class='badge badge-success'>04/04/2024 12:31:08 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:31:18 PM</span>
-															<span class='badge badge-default'>0h:0m:9s+668ms</span>
+															<h5 class="test-status text-pass">NavigateToYouTube</h5>
+															<span class='badge badge-success'>05/22/2024 7:07:13 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:07:25 PM</span>
+															<span class='badge badge-default'>0h:0m:11s+670ms</span>
 														</div>
 																											</div>
 												</div>
@@ -283,7 +283,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:31:18</td>
+				<td>19:07:25</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -301,19 +301,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifySearchResultOnFirstPage</p> 
-													<p class="duration text-sm">0h:0m:10s+860ms</p> 
-													<span class="datetime">12:31:18 PM</span>
+													<p class="name">SelectDeliveryVariantByCity</p> 
+													<p class="duration text-sm">0h:0m:9s+412ms</p> 
+													<span class="datetime">19:07:25 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifySearchResultOnFirstPage</h5>
-															<span class='badge badge-success'>04/04/2024 12:31:18 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:31:29 PM</span>
-															<span class='badge badge-default'>0h:0m:10s+860ms</span>
+															<h5 class="test-status text-pass">SelectDeliveryVariantByCity</h5>
+															<span class='badge badge-success'>05/22/2024 7:07:25 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:07:35 PM</span>
+															<span class='badge badge-default'>0h:0m:9s+412ms</span>
 														</div>
 																											</div>
 												</div>
@@ -328,7 +328,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:31:29</td>
+				<td>19:07:35</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -340,25 +340,25 @@ Test ended with Pass,
 </div>    
 											</div>
 										</li>
-										<li class="test-item" status="fail" author="" device="" tag=""> 
-											<div class="status-avatar fail-bg">
-												<i class="fa fa-times text-white"></i>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifySearchResultOnLastPage</p> 
-													<p class="duration text-sm">0h:0m:17s+253ms</p> 
-													<span class="datetime">12:31:29 PM</span>
+													<p class="name">SelectSubCategory</p> 
+													<p class="duration text-sm">0h:0m:9s+861ms</p> 
+													<span class="datetime">19:07:35 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-fail">VerifySearchResultOnLastPage</h5>
-															<span class='badge badge-success'>04/04/2024 12:31:29 PM</span>
-															<span class='badge badge-danger'>04/04/2024 12:31:47 PM</span>
-															<span class='badge badge-default'>0h:0m:17s+253ms</span>
+															<h5 class="test-status text-pass">SelectSubCategory</h5>
+															<span class='badge badge-success'>05/22/2024 7:07:35 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:07:45 PM</span>
+															<span class='badge badge-default'>0h:0m:9s+861ms</span>
 														</div>
 																											</div>
 												</div>
@@ -372,19 +372,101 @@ Test ended with Pass,
 	</tr></thead>
 	<tbody>
 			<tr class="event-row">
-				<td><i class="fa fa-times text-fail"></i></td>
-				<td>12:31:47</td>
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>19:07:45</td>
 				<td>
-Test ended with Fail, 
-<br>   at NUnit.Framework.Legacy.StringAssert.Contains(String expected, String actual, String message, Object[] args)
-   at MakeupTestingTests.SearchResultTests.VerifySearchResultOnLastPage() in E:\VisualStudio\RepVisualStudio\MakeupTesting\MakeupTestingTests\SearchResultTests.cs:line 88
-
+Test ended with Pass, 
 <br>
-<br>  The product name is missing in the title Набор по уходу за лицом - Filorga Intense Hydration Discovery Kit (water/50ml + conc/7ml + cr/30ml + mask/30ml + pouch)
-Assert.That(actual, Does.Contain(expected))
-  Expected: String containing "крем"
-  But was:  "набор по уходу за лицом - filorga intense hydration discovery kit (water/50ml + conc/7ml + cr/30ml + mask/30ml + pouch)"
+<br>									</td>
+			</tr>
+	</tbody>
+</table>
 
+</div>    
+											</div>
+										</li>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
+											</div>
+											<div class="open-test">
+												<div class="test-detail"> 
+													<p class="name">VerifyScrollUpButton</p> 
+													<p class="duration text-sm">0h:0m:7s+214ms</p> 
+													<span class="datetime">19:07:45 PM</span>
+												</div>
+											</div>
+											<div class="test-contents d-none">
+												<div class="detail-head">
+													<div class="p-v-10 d-inline-block">	
+														<div class="info">
+															<h5 class="test-status text-pass">VerifyScrollUpButton</h5>
+															<span class='badge badge-success'>05/22/2024 7:07:45 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:07:52 PM</span>
+															<span class='badge badge-default'>0h:0m:7s+214ms</span>
+														</div>
+																											</div>
+												</div>
+<div class="detail-body mt-4">												
+	
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>19:07:52</td>
+				<td>
+Test ended with Pass, 
+<br>
+<br>									</td>
+			</tr>
+	</tbody>
+</table>
+
+</div>    
+											</div>
+										</li>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
+											</div>
+											<div class="open-test">
+												<div class="test-detail"> 
+													<p class="name">VerifySubscriptionErrorDisplay</p> 
+													<p class="duration text-sm">0h:0m:7s+517ms</p> 
+													<span class="datetime">19:07:52 PM</span>
+												</div>
+											</div>
+											<div class="test-contents d-none">
+												<div class="detail-head">
+													<div class="p-v-10 d-inline-block">	
+														<div class="info">
+															<h5 class="test-status text-pass">VerifySubscriptionErrorDisplay</h5>
+															<span class='badge badge-success'>05/22/2024 7:07:52 PM</span>
+															<span class='badge badge-danger'>05/22/2024 7:08:00 PM</span>
+															<span class='badge badge-default'>0h:0m:7s+517ms</span>
+														</div>
+																											</div>
+												</div>
+<div class="detail-body mt-4">												
+	
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>19:08:00</td>
+				<td>
+Test ended with Pass, 
+<br>
 <br>									</td>
 			</tr>
 	</tbody>
